hard-gists/6027504/run.log
=== Docker Run Log for 6027504 ===
Started at: Mi 29. Okt 16:18:15 CET 2025

[2025-10-29 16:18:16] START: Running container for 6027504
[2025-10-29 16:18:16] SUCCESS: Container 24a2efe141169809013c67c71588f586c1f41bc26f737c19c6a558dfb7f12ab9 started for 6027504
=== Container logs for 6027504 ===
  File "/snippet.py", line 51
    print "received %d bytes " % len(datagram)          
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6027504 ===
[2025-10-29 16:18:18] INFO: Container 24a2efe141169809013c67c71588f586c1f41bc26f737c19c6a558dfb7f12ab9 has stopped
